# AI-Writing-Detector

./: .gitignore
AI-Writing-Detector/: README.md
AI-Writing-Detector/data-generation/: main.py  pyproject.toml
AI-Writing-Detector/docs/: ARCHITECTURE.md  DATA_GENERATION.md  DATA_SCRAPING.md
AI-Writing-Detector/scraping/: main.py  pyproject.toml
AI-Writing-Detector/scraping/src/: main.py  random_list.py
AI-Writing-Detector/training/src/: inference.py  main.py  pyproject.toml
results/checkpoint-123/: adapter_model.safetensors  scheduler.pt  trainer_state.json
results/checkpoint-41/: adapter_model.safetensors  scheduler.pt  trainer_state.json
results/checkpoint-82/: adapter_config.json  scheduler.pt  trainer_state.json
results/final_model/: adapter_model.safetensors
